[package]
name = "crypto-test"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = "4.1.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
base64 = "0.21.7"
