[tool.poetry]
name = "crypto-test"
version = "0.1.0"
description = "Python-Rust encryption demo"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.9.0 || >3.9.0,<3.9.1 || >3.9.1"
cryptography = "^44.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
